0.04
 - Update copyright years.

0.03 2022-05-26T02:33:38+02:00
 - Add test for constructor.
 - Add test for run method with help.
 - Improve help.
 - Update copyright years.

0.02 2021-06-17T18:55:41+02:00
 - Add ERRORS section to doc.
 - Add variable stow directory by -d command option.
 - Regen example.

0.01 2021-06-08T18:29:29+02:00
 - First version.