@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.03 2022-05-26T02:33:38+02:00
